<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:design="http://schemas.android.com/apk/res-auto">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/n9"
        android:padding="0dp">

        <TextView
            android:id="@+id/headlines"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borderh"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/conditions"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/c1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/c1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/c2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/c2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="17dp" />


        <TextView
            android:id="@+id/c3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/c3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/c4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/c4"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/c5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/c5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/c6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/c6"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="17dp" />


        <TextView
            android:id="@+id/c7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/c7"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/c8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/c8"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="17dp" />


        <TextView
            android:id="@+id/c9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/c9"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="17dp" />
        <TextView
            android:id="@+id/c10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/c10"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="17dp" />
        <TextView
            android:id="@+id/c11"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/c11"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="17dp" />
        <TextView
            android:id="@+id/c12"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/c12"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="17dp" />
        <TextView
            android:id="@+id/c13"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/c13"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="17dp" />
        <TextView
            android:id="@+id/c14"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/c14"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="17dp" />

    </LinearLayout>


</ScrollView>