<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/n9"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="start"
        android:id="@+id/signup_layout">



    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv1"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/continue_registration"
        android:textColor="@color/white_greyish"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="start"
        android:hint="@string/fullName"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:id="@+id/v1"
        android:background="@color/white_greyish" />



    <EditText
        android:id="@+id/mobileNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="start"
        android:hint="@string/phone"
        android:focusable="false"
        android:inputType="phone"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:id="@+id/v2"
        android:background="@color/white_greyish" />






    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

        <TextView
            android:id="@+id/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/conditions"
            android:textColor="@color/white_greyish"
            android:textSize="15sp" />


        <CheckBox
            android:id="@+id/terms_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/terms_conditions"
            android:textColor="@color/white"
            android:textColorHint="#FF9800"
            android:textColorLink="#FF9800"
            android:textSize="14sp" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bordersearch"
        android:padding="3dp"
        android:text="@string/signUp"
        android:textColor="@color/n9"
        android:layout_alignBottom="@+id/terms_conditions"
        android:textSize="17sp"
        android:textStyle="bold" />

        <!--
    <TextView
        android:id="@+id/already_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/already_user"
        android:textColor="@color/white_greyish"
        android:textSize="15sp" />
-->


    </LinearLayout>

</LinearLayout>