<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">



    <LinearLayout
        android:id="@+id/activity_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="start"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/name_of_activity"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="35"
            android:id="@+id/NameAct" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:id="@+id/NameUser" />



<!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_of_activity"/>



        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:backgroundTint="@color/n9"
            android:layout_centerHorizontal="true"
             />

-->


   <!--
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:drawablePadding="8dp"
            android:textColorHint="@color/light_grey"
            android:hint=" city" />
        -->


        <EditText
            android:id="@+id/city"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/background"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:drawablePadding="8dp"
            android:gravity="start"
            android:text="المدينة"
            android:paddingRight="30dp"
            android:paddingTop="15dp"
            android:inputType="none"
            android:singleLine="true"
            android:editable="false"
            android:textSize="16sp" >
            <requestFocus/>
        </EditText>



        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/TypeAct"
        android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:background="@drawable/background"
        android:gravity="center"
        android:layout_marginLeft="5dp"
            android:paddingRight="22dp"
            android:layout_marginRight="5dp"
        android:spinnerMode="dropdown" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:inputType="phone"
            android:id="@+id/mobile" />






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:background="#FFFFFF"
            android:padding="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="back"
                android:layout_marginLeft="10dp"
                android:layout_height="33dp"
                android:layout_marginBottom="50dp"
                android:textColor="@color/n9"
                android:textStyle="bold"
                android:background="@drawable/border_edit"
                android:text="@string/cancel"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="done"
                android:layout_marginLeft="10dp"
                android:layout_height="33dp"
                android:layout_marginBottom="50dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/border_green"
                android:text="@string/done"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>